content/classes/3.0/StandardMaterialDefines.md
---
TAGS:
---
## Description

class [StandardMaterialDefines](/classes/3.0/StandardMaterialDefines) extends [MaterialDefines](/classes/3.0/MaterialDefines)



## Constructor

## new [StandardMaterialDefines](/classes/3.0/StandardMaterialDefines)()


## Members

### DIFFUSE : boolean



### AMBIENT : boolean



### OPACITY : boolean



### OPACITYRGB : boolean



### REFLECTION : boolean



### EMISSIVE : boolean



### SPECULAR : boolean



### BUMP : boolean



### PARALLAX : boolean



### PARALLAXOCCLUSION : boolean



### SPECULAROVERALPHA : boolean



### CLIPPLANE : boolean



### ALPHATEST : boolean



### ALPHAFROMDIFFUSE : boolean



### POINTSIZE : boolean



### FOG : boolean



### SPECULARTERM : boolean



### DIFFUSEFRESNEL : boolean



### OPACITYFRESNEL : boolean



### REFLECTIONFRESNEL : boolean



### REFRACTIONFRESNEL : boolean



### EMISSIVEFRESNEL : boolean



### FRESNEL : boolean



### NORMAL : boolean



### UV1 : boolean



### UV2 : boolean



### VERTEXCOLOR : boolean



### VERTEXALPHA : boolean



### NUM_BONE_INFLUENCERS : number



### BonesPerMesh : number



### INSTANCES : boolean



### GLOSSINESS : boolean



### ROUGHNESS : boolean



### EMISSIVEASILLUMINATION : boolean



### LINKEMISSIVEWITHDIFFUSE : boolean



### REFLECTIONFRESNELFROMSPECULAR : boolean



### LIGHTMAP : boolean



### USELIGHTMAPASSHADOWMAP : boolean



### REFLECTIONMAP_3D : boolean



### REFLECTIONMAP_SPHERICAL : boolean



### REFLECTIONMAP_PLANAR : boolean



### REFLECTIONMAP_CUBIC : boolean



### REFLECTIONMAP_PROJECTION : boolean



### REFLECTIONMAP_SKYBOX : boolean



### REFLECTIONMAP_EXPLICIT : boolean



### REFLECTIONMAP_EQUIRECTANGULAR : boolean



### REFLECTIONMAP_EQUIRECTANGULAR_FIXED : boolean



### REFLECTIONMAP_MIRROREDEQUIRECTANGULAR_FIXED : boolean



### INVERTCUBICMAP : boolean



### LOGARITHMICDEPTH : boolean



### REFRACTION : boolean



### REFRACTIONMAP_3D : boolean



### REFLECTIONOVERALPHA : boolean



### INVERTNORMALMAPX : boolean



### INVERTNORMALMAPY : boolean



### TWOSIDEDLIGHTING : boolean



### SHADOWFLOAT : boolean



### CAMERACOLORGRADING : boolean



### CAMERACOLORCURVES : boolean



### MORPHTARGETS : boolean



### MORPHTARGETS_NORMAL : boolean



### MORPHTARGETS_TANGENT : boolean



### NUM_MORPH_INFLUENCERS : number



### USERIGHTHANDEDSYSTEM : boolean



## Methods

### setReflectionMode(modeToEnable) &rarr; void



#### Parameters
 | Name | Type | Description
---|---|---|---
 | modeToEnable | string | 

