content/classes/3.1/StandardMaterialDefines.md
---
TAGS:
---
## Description

class [StandardMaterialDefines](/classes/3.1/StandardMaterialDefines) extends [MaterialDefines](/classes/3.1/MaterialDefines)



## Constructor

## new [StandardMaterialDefines](/classes/3.1/StandardMaterialDefines)()


## Members

### MAINUV1 : boolean


### MAINUV2 : boolean


### DIFFUSE : boolean


### DIFFUSEDIRECTUV : number


### AMBIENT : boolean


### AMBIENTDIRECTUV : number


### OPACITY : boolean


### OPACITYDIRECTUV : number


### OPACITYRGB : boolean


### REFLECTION : boolean


### EMISSIVE : boolean


### EMISSIVEDIRECTUV : number


### SPECULAR : boolean


### SPECULARDIRECTUV : number


### BUMP : boolean


### BUMPDIRECTUV : number


### PARALLAX : boolean


### PARALLAXOCCLUSION : boolean


### SPECULAROVERALPHA : boolean


### CLIPPLANE : boolean


### ALPHATEST : boolean


### DEPTHPREPASS : boolean


### ALPHAFROMDIFFUSE : boolean


### POINTSIZE : boolean


### FOG : boolean


### SPECULARTERM : boolean


### DIFFUSEFRESNEL : boolean


### OPACITYFRESNEL : boolean


### REFLECTIONFRESNEL : boolean


### REFRACTIONFRESNEL : boolean


### EMISSIVEFRESNEL : boolean


### FRESNEL : boolean


### NORMAL : boolean


### UV1 : boolean


### UV2 : boolean


### VERTEXCOLOR : boolean


### VERTEXALPHA : boolean


### NUM_BONE_INFLUENCERS : number


### BonesPerMesh : number


### INSTANCES : boolean


### GLOSSINESS : boolean


### ROUGHNESS : boolean


### EMISSIVEASILLUMINATION : boolean


### LINKEMISSIVEWITHDIFFUSE : boolean


### REFLECTIONFRESNELFROMSPECULAR : boolean


### LIGHTMAP : boolean


### LIGHTMAPDIRECTUV : number


### USELIGHTMAPASSHADOWMAP : boolean


### REFLECTIONMAP_3D : boolean


### REFLECTIONMAP_SPHERICAL : boolean


### REFLECTIONMAP_PLANAR : boolean


### REFLECTIONMAP_CUBIC : boolean


### REFLECTIONMAP_PROJECTION : boolean


### REFLECTIONMAP_SKYBOX : boolean


### REFLECTIONMAP_EXPLICIT : boolean


### REFLECTIONMAP_EQUIRECTANGULAR : boolean


### REFLECTIONMAP_EQUIRECTANGULAR_FIXED : boolean


### REFLECTIONMAP_MIRROREDEQUIRECTANGULAR_FIXED : boolean


### INVERTCUBICMAP : boolean


### LOGARITHMICDEPTH : boolean


### REFRACTION : boolean


### REFRACTIONMAP_3D : boolean


### REFLECTIONOVERALPHA : boolean


### TWOSIDEDLIGHTING : boolean


### SHADOWFLOAT : boolean


### MORPHTARGETS : boolean


### MORPHTARGETS_NORMAL : boolean


### MORPHTARGETS_TANGENT : boolean


### NUM_MORPH_INFLUENCERS : number


### NONUNIFORMSCALING : boolean


### PREMULTIPLYALPHA : boolean


### IMAGEPROCESSING : boolean


### VIGNETTE : boolean


### VIGNETTEBLENDMODEMULTIPLY : boolean


### VIGNETTEBLENDMODEOPAQUE : boolean


### TONEMAPPING : boolean


### CONTRAST : boolean


### COLORCURVES : boolean


### COLORGRADING : boolean


### COLORGRADING3D : boolean


### SAMPLER3DGREENDEPTH : boolean


### SAMPLER3DBGRMAP : boolean


### IMAGEPROCESSINGPOSTPROCESS : boolean


### EXPOSURE : boolean


## Methods

### setReflectionMode(modeToEnable) &rarr; void



#### Parameters
 | Name | Type | Description
---|---|---|---
 | modeToEnable | string | 

